--- a/index.html
+++ b/index.html
@@ -57,13 +57,6 @@
                     <p>Developer Evangelist @ Autodesk</p>
                     <i class="fa fa-twitter fa-fw"></i> @AfroJme
                 </section>
-
-                <section>
-                    <iframe src="http://lmv.rocks/viewer/?url=http://lmv.rocks/data/house/Residential%20Exterior.obj.svf" width="1000px" height="640px"></iframe>
-                </section>
-                
-                <section><a href="https://360.autodesk.com/Viewer">Drag &amp; Drop App</a></section>
-                
                 <section>
                     <h3>It's easy and powerful</h3>
                     <ul class="fragment">
@@ -99,8 +92,8 @@
                     </div>
                 </section>
                 <section>
-                    <p>Eye Candy 3D Models in seconds</p>
-                    <iframe src="http://lmv.rocks/viewer/?url=http://lmv.rocks/data/racecar/Design.svf" height="500px" width="80%"></iframe>
+                    <p>Eye candy 3D models in seconds</p>
+                    <iframe src="http://lmv.rocks/viewer/?url=http://lmv.rocks/data/house/Residential%20Exterior.obj.svf" width="1000px" height="640px"></iframe>
                 </section>
 
                 <section>
@@ -180,7 +173,7 @@
                     <h1>Resources</h1>
                     <ul class="fragment">
                         <li class="fragment"><a href="https://developer.autodesk.com/">Developer Portal</a></li>
-<<<<<<< HEAD
+
                         <li class="fragment"><a href="http://developer-autodesk.github.io/">Samples page on GitHub</a></li>
                         <ul class="fragment">
                             <li>quick start guides</li>
@@ -189,12 +182,11 @@
                         </ul>
                         <li class="fragment">These slides are on <br><a href="http://jaimerosales.github.io/10-mins-view-and-data">http://jaimerosales.github.io/10-mins-view-and-data</a></li>
                         <li class="fragment">Ask, Don't be shy</li>
-=======
                         <li class="fragment"><a href="http://developer-autodesk.github.io/">Code Samples on GitHub</a></li>
                         <li class="fragment"><a href="https://github.com/Developer-Autodesk/tutorial-getting.started-view.and.data">Tutorial</a></li>
-                        <li class="fragment">These slides are on <br><a href="http://shiya.github.io/10-mins-view-and-data">http://shiya.github.io/10-mins-view-and-data</a></li>
-                        <li class="fragment">Ask me questions</li>
->>>>>>> shiya/master
+                        <li class="fragment">These slides are on <br><a href="http://jaimerosales.github.io/5-min-view-and-data">http://jaimerosales.github.io/5-min-view-and-data</a></li>
+                        <li class="fragment">Ask me questions, Don't be shy</li>
+
                     </ul>
                 </section>
 
