--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </section>
                 <section>
                     <p>Eye candy 3D models in seconds</p>
-                    <iframe src="http://lmv.rocks/viewer/?url=http://lmv.rocks/data/house/Residential%20Exterior.obj.svf" width="1000px" height="640px"></iframe>
+                    <iframe src="http://lmv.rocks/viewer/?url=http://lmv.rocks/data/house/Residential%20Exterior.obj.svf" height="500px" width="80%"></iframe>
                 </section>
 
                 <section>
